# threedi-api-client

./: .gitignore  .readthedocs.yml  .travis.yml  404.html  HISTORY.rst  Makefile  README.rst  index.html  mkdocs.yml  pyproject.toml  requirements_actions.txt  requirements_dev.txt  setup.cfg  setup.py  startup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  python-app.yml  release.yml  test.yml
docs/: .gitignore  Makefile  conf.py  examples.rst  index.md  index.rst  installation.rst  make.bat  usage.md  usage.rst
docs/source/: conf.py  index.rst
examples/: README.md  download_simulation_results.ipynb  interact_via_websocket.ipynb  simulation_with_events.ipynb  starting_your_first_simulation.ipynb  visualise_results_1D_nodes_threedimodel.ipynb  visualise_threedimodel.ipynb
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi_client/aio/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi_client/api/: __init__.py  auth_api.py  contracts_api.py  files_api.py  inpy_versions_api.py  organisations_api.py  permissions_api.py  repositories_api.py  revisions_api.py  roles_api.py  simulations_api.py  statuses_api.py  threedimodels_api.py  usage_api.py
openapi_client/models/: __init__.py  action.py  aggregation_settings.py  arrival_time_post_processing.py  authenticate.py  basic_post_processing.py  boundary.py  boundary_condition.py  breach.py  breach_graph.py  breach_graph_request.py  constant_boundary.py  constant_lateral.py  constant_local_rain.py  constant_rain.py  constant_sources_sinks.py  constant_wind.py  contract.py  current_status.py  damage_estimation.py  damage_post_processing.py  damage_seconds.py  download.py  event.py  event_state.py  file.py  file_meta.py  file_raster_rain.py  file_raster_sources_sinks.py  file_read_only.py  file_timeseries_rain.py  file_timeseries_sources_sinks.py  file_upload.py  flow_state_overview.py  general_settings.py  grid_event_state.py  ground_water_level.py  ground_water_raster.py  (+149 more)
schemas/: swagger.yaml  swagger_3.0.yaml
search/: search_index.json
tests/: test_auth.py  test_files.py  test_files_aio.py  test_threedi_api.py  test_threedi_api_client.py  test_threedi_api_client_aio.py  test_threedi_openapi_client.py
threedi_api_client/: __init__.py  api.py  auth.py  config.py  files.py  threedi_api_client.py  versions.py
usage/: index.html
(+693 files in other folders)
