[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threedi-api-client"
description = "client for the threedi API"
requires-python = ">=3.10"
license = {text = "BSD license"}
authors = [
    {name = "Jelle Prins", email = "jelle.prins@nelen-schuurmans.nl"}
]
keywords = ["threedi-api-client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "certifi>=2019.3.9",
    "urllib3>=2.0,<3.0.0",
    "six>=1.10",
    "python-dateutil",
]
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://github.com/nens/threedi-api-client"
Repository = "https://github.com/nens/threedi-api-client"

[project.optional-dependencies]
aio = [
    "aiohttp>=3.6.3,<3.10",
    "aiofiles>=0.6",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pyjwt",
]
docs = [
    "sphinx-rtd-theme",
]
dev = [
    "bumpversion",
    "coverage",
    "flake8",
    "isort",
    "pytest",
    "pytest-asyncio",
    "pytest-runner",
    "pyjwt",
    "sphinx",
    "sphinx-rtd-theme",
    "tox",
    "wheel",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "threedi_api_client.__version__"}
readme = {file = ["README.rst", "HISTORY.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
include = [
    "openapi_client",
    "openapi_client.*",
    "threedi_api_client",
    "threedi_api_client.*",
]

[tool.flake8]
exclude = ["docs", "threedi_api_client/openapi", "threedi_api_client/aio/openapi"]
ignore = ["E203", "E266", "E501", "W503"]

[tool.isort]
skip = ["threedi_api_client/openapi", "threedi_api_client/aio/openapi", "threedi_api_client/aio/aiohttp_retry.py"]
profile = "black"
force_alphabetical_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["threedi_api_client"]
omit = ["*/tests/*"]

[tool.zest-releaser]
create-wheel = true
python-file-with-version = "threedi_api_client/__init__.py"
